@@ -1,18 +1,10 @@
-/* Copyright (C) 2018  optyfr
- *
- * This program is free software; you can redistribute it and/or
- * modify it under the terms of the GNU General Public License
- * as published by the Free Software Foundation; either version 2
- * of the License, or (at your option) any later version.
- * 
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU General Public License for more details.
- * 
- * You should have received a copy of the GNU General Public License
- * along with this program; if not, write to the Free Software
- * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
+/*
+ * Copyright (C) 2018 optyfr This program is free software; you can redistribute it and/or modify it under the terms of the GNU
+ * General Public License as published by the Free Software Foundation; either version 2 of the License, or (at your option) any
+ * later version. This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied
+ * warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details. You should
+ * have received a copy of the GNU General Public License along with this program; if not, write to the Free Software Foundation,
+ * Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.
  */
 package jrm.profile.fix.actions;
 
@@ -41,14 +33,14 @@ import net.lingala.zip4j.model.ZipParameters;
 import net.lingala.zip4j.util.InternalZipConstants;
 
 /**
- * Concrete action for copying and adding a files/ROM entry to a targeted game
- * package container.
+ * Concrete action for copying and adding a files/ROM entry to a targeted game package container.
  * <p>
- * This supports multi-formatted sources and destinations such as standard
- * directories, standalone ZIP/7Z archives, and virtual zip file systems.
+ * This supports multi-formatted sources and destinations such as standard directories, standalone ZIP/7Z archives, and virtual zip
+ * file systems.
  * </p>
  * 
  * @author optyfr
+ * 
  * @since 1.0
  */
 public class AddEntry extends EntryAction {
@@ -76,7 +68,7 @@ public class AddEntry extends EntryAction {
      * Constructs a new {@code AddEntry} action.
      * 
      * @param entity the related {@link EntityBase} target
-     * @param entry  the source {@link Entry} details to add
+     * @param entry the source {@link Entry} details to add
      */
     public AddEntry(final EntityBase entity, final Entry entry) {
         super(entry);
@@ -84,14 +76,14 @@ public class AddEntry extends EntryAction {
     }
 
     /**
-     * Performs the add entry operation inside a target file system directory on
-     * disk.
+     * Performs the add entry operation inside a target file system directory on disk.
      * 
      * @param session the current active user session
-     * @param target  the target parent folder path on disk
+     * @param target the target parent folder path on disk
      * @param handler the visual UI progress bar status handler
-     * @param i       the current progression index
-     * @param max     the total progression maximum
+     * @param i the current progression index
+     * @param max the total progression maximum
+     * 
      * @return {@code true} if the add action succeeded, otherwise {@code false}
      */
     @Override
@@ -111,15 +103,15 @@ public class AddEntry extends EntryAction {
     }
 
     /**
-     * Performs the add entry operation inside a target standalone Zip file using
-     * ZipFile.
+     * Performs the add entry operation inside a target standalone Zip file using ZipFile.
      * 
      * @param session the current active user session
-     * @param zipf    the target ZipFile package
-     * @param zipp    the zip file parameters
+     * @param zipf the target ZipFile package
+     * @param zipp the zip file parameters
      * @param handler the visual UI progress bar status handler
-     * @param i       the current progression index
-     * @param max     the total progression maximum
+     * @param i the current progression index
+     * @param max the total progression maximum
+     * 
      * @return {@code true} if the add action succeeded, otherwise {@code false}
      */
     @Override
@@ -138,11 +130,11 @@ public class AddEntry extends EntryAction {
     }
 
     /**
-     * Extracts the entry from a default 7z/RAR compressed archive source and saves
-     * it to a path.
+     * Extracts the entry from a default 7z/RAR compressed archive source and saves it to a path.
      * 
      * @param session the current active session
      * @param dstpath the destination path on disk
+     * 
      * @return {@code true} if the operation succeeded, otherwise {@code false}
      */
     private boolean default2Path(final Session session, final Path dstpath) {
@@ -165,13 +157,13 @@ public class AddEntry extends EntryAction {
     }
 
     /**
-     * Extracts the entry from a default 7z/RAR compressed archive source and adds
-     * it to a zip file.
+     * Extracts the entry from a default 7z/RAR compressed archive source and adds it to a zip file.
      * 
      * @param session the current active session
-     * @param zipf    the target ZipFile
-     * @param zipp    the configuration zip parameters
-     * @param zentry  the zip entry name
+     * @param zipf the target ZipFile
+     * @param zipp the configuration zip parameters
+     * @param zentry the zip entry name
+     * 
      * @return {@code true} if the operation succeeded, otherwise {@code false}
      */
     private boolean default2zos(final Session session, final ZipFile zipf, final ZipParameters zipp, String zentry) {
@@ -193,11 +185,12 @@ public class AddEntry extends EntryAction {
      * Extracts the entry from a zip source and copies it directly to a path.
      * 
      * @param dstpath the destination path
+     * 
      * @return {@code true} if the copy succeeded, otherwise {@code false}
      */
     private boolean zip2Path(final Path dstpath) {
         try (final var srczf = new ZipFile(entry.getParent().getFile())) {
-            srczf.setBufferSize((int) Math.max(InternalZipConstants.MIN_BUFF_SIZE, Math.min(entry.getSize(), 65536)));
+            srczf.setBufferSize(Math.clamp(entry.getSize(), InternalZipConstants.MIN_BUFF_SIZE, 65536));
             final var srcheader = srczf.getFileHeader(ZipTools.toZipEntry(entry.getFile()));
             final var srcstream = srczf.getInputStream(srcheader);
             Files.copy(srcstream, dstpath, StandardCopyOption.REPLACE_EXISTING);
@@ -212,14 +205,15 @@ public class AddEntry extends EntryAction {
     /**
      * Extracts the entry from a zip source and copies it to a target zip archive.
      * 
-     * @param zipf   the target ZipFile
-     * @param zipp   the zip parameters
+     * @param zipf the target ZipFile
+     * @param zipp the zip parameters
      * @param zentry the name of the entry inside the zip
+     * 
      * @return {@code true} if the add succeeded, otherwise {@code false}
      */
     private boolean zip2zos(final ZipFile zipf, final ZipParameters zipp, String zentry) {
         try (final var srczf = new ZipFile(entry.getParent().getFile())) {
-            srczf.setBufferSize((int) Math.max(InternalZipConstants.MIN_BUFF_SIZE, Math.min(entry.getSize(), 65536)));
+            srczf.setBufferSize(Math.clamp(entry.getSize(), InternalZipConstants.MIN_BUFF_SIZE, 65536));
             final var srcheader = srczf.getFileHeader(ZipTools.toZipEntry(entry.getFile()));
             final var srcstream = srczf.getInputStream(srcheader);
             zipp.setFileNameInZip(zentry);
@@ -236,6 +230,7 @@ public class AddEntry extends EntryAction {
      * Resolves fake uncompressed sources and copies them to a path.
      * 
      * @param dstpath the target path
+     * 
      * @return {@code true} if copy succeeded, otherwise {@code false}
      */
     private boolean fake2Path(final Path dstpath) {
@@ -256,9 +251,10 @@ public class AddEntry extends EntryAction {
     /**
      * Resolves fake uncompressed sources and copies them to a target zip.
      * 
-     * @param zipf   the target ZipFile
-     * @param zipp   the zip parameters
+     * @param zipf the target ZipFile
+     * @param zipp the zip parameters
      * @param zentry the name of the entry in the zip
+     * 
      * @return {@code true} if addition succeeded, otherwise {@code false}
      */
     private boolean fake2zos(final ZipFile zipf, final ZipParameters zipp, String zentry) {
@@ -279,6 +275,7 @@ public class AddEntry extends EntryAction {
      * Resolves uncompressed directory sources and copies them to a path.
      * 
      * @param dstpath the destination path
+     * 
      * @return {@code true} if copy succeeded, otherwise {@code false}
      */
     private boolean dir2Path(final Path dstpath) {
@@ -299,9 +296,10 @@ public class AddEntry extends EntryAction {
     /**
      * Resolves uncompressed directory sources and adds them to a target zip file.
      * 
-     * @param zipf   the target ZipFile
-     * @param zipp   the zip parameters
+     * @param zipf the target ZipFile
+     * @param zipp the zip parameters
      * @param zentry the entry name
+     * 
      * @return {@code true} if addition succeeded, otherwise {@code false}
      */
     private boolean dir2zos(final ZipFile zipf, final ZipParameters zipp, String zentry) {
@@ -319,14 +317,14 @@ public class AddEntry extends EntryAction {
     }
 
     /**
-     * Performs the add entry operation inside a target compressed general archive
-     * wrapper.
+     * Performs the add entry operation inside a target compressed general archive wrapper.
      * 
-     * @param session    the current active session
+     * @param session the current active session
      * @param dstarchive the destination archive wrapper
-     * @param handler    the progress visual status tracker
-     * @param i          the progression index
-     * @param max        the progression maximum limits
+     * @param handler the progress visual status tracker
+     * @param i the progression index
+     * @param max the progression maximum limits
+     * 
      * @return {@code true} if the add operation succeeded, otherwise {@code false}
      */
     @Override
@@ -347,8 +345,9 @@ public class AddEntry extends EntryAction {
     /**
      * Copies default compressed source entries into a general archive wrapper.
      * 
-     * @param session    the current active session
+     * @param session the current active session
      * @param dstarchive the destination archive
+     * 
      * @return {@code true} if addition succeeded, otherwise {@code false}
      */
     private boolean default2Archive(final Session session, final Archive dstarchive) {
@@ -367,11 +366,12 @@ public class AddEntry extends EntryAction {
      * Copies zip source entries into a general archive wrapper.
      * 
      * @param dstarchive the destination archive wrapper
+     * 
      * @return {@code true} if addition succeeded, otherwise {@code false}
      */
     private boolean zip2Archive(final Archive dstarchive) {
         try (final var srczf = new ZipFile(entry.getParent().getFile())) {
-            srczf.setBufferSize((int) Math.max(InternalZipConstants.MIN_BUFF_SIZE, Math.min(entry.getSize(), 65536)));
+            srczf.setBufferSize((int) Math.clamp(entry.getSize(), InternalZipConstants.MIN_BUFF_SIZE, 65536));
             final var srcheader = srczf.getFileHeader(ZipTools.toZipEntry(entry.getFile()));
             final var srcstream = srczf.getInputStream(srcheader);
             return dstarchive.addStdIn(srcstream, entity.getName()) == 0;
@@ -386,6 +386,7 @@ public class AddEntry extends EntryAction {
      * Copies fake source files into a general archive wrapper.
      * 
      * @param dstarchive the destination archive wrapper
+     * 
      * @return {@code true} if addition succeeded, otherwise {@code false}
      */
     private boolean fake2Archive(final Archive dstarchive) {
@@ -402,6 +403,7 @@ public class AddEntry extends EntryAction {
      * Copies uncompressed folder source files into a general archive wrapper.
      * 
      * @param dstarchive the destination archive wrapper
+     * 
      * @return {@code true} if addition succeeded, otherwise {@code false}
      */
     private boolean dir2Archive(final Archive dstarchive) {
@@ -418,10 +420,11 @@ public class AddEntry extends EntryAction {
      * Performs the add entry operation inside a virtual zip FileSystem.
      * 
      * @param session the current active user session
-     * @param dstfs   the target virtual zip FileSystem
+     * @param dstfs the target virtual zip FileSystem
      * @param handler the progress visual status tracker
-     * @param i       the progression index
-     * @param max     the progression maximum limits
+     * @param i the progression index
+     * @param max the progression maximum limits
+     * 
      * @return {@code true} if addition succeeded, otherwise {@code false}
      */
     @Override
@@ -445,6 +448,7 @@ public class AddEntry extends EntryAction {
      * 
      * @param session the current active session
      * @param dstpath the destination path inside the FileSystem
+     * 
      * @return {@code true} if addition succeeded, otherwise {@code false}
      */
     private boolean default2FS(final Session session, final Path dstpath) {
@@ -469,6 +473,7 @@ public class AddEntry extends EntryAction {
      * Copies zip source entries into a virtual zip FileSystem.
      * 
      * @param dstpath the destination path inside the FileSystem
+     * 
      * @return {@code true} if addition succeeded, otherwise {@code false}
      */
     private boolean zip2FS(final Path dstpath) {
@@ -490,6 +495,7 @@ public class AddEntry extends EntryAction {
      * Copies fake source files into a virtual zip FileSystem.
      * 
      * @param dstpath the destination path inside the FileSystem
+     * 
      * @return {@code true} if addition succeeded, otherwise {@code false}
      */
     private boolean fake2FS(final Path dstpath) {
@@ -511,6 +517,7 @@ public class AddEntry extends EntryAction {
      * Copies uncompressed directory source files into a virtual zip FileSystem.
      * 
      * @param dstpath the destination path inside the FileSystem
+     * 
      * @return {@code true} if addition succeeded, otherwise {@code false}
      */
     private boolean dir2FS(final Path dstpath) {
